[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsfemasr"
version = "1.1.0"
description = "FeMaSR function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "HolyWu", email = "holywu@gmail.com"}]
keywords = ["FeMaSR", "VapourSynth"]
classifiers = [
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Topic :: Multimedia :: Video"
]
dependencies = [
  "numpy",
  "requests",
  "tensorrt>=8.5.3.1",
  "timm",
  "torch>=1.13.0",
  "torch-tensorrt-fx-only>=1.3.0",
  "tqdm",
  "VapourSynth>=55"
]

[project.urls]
"Homepage" = "https://github.com/HolyWu/vs-femasr"
"Bug Tracker" = "https://github.com/HolyWu/vs-femasr/issues"
