[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsfemasr"
version = "2.0.0"
description = "FeMaSR function for VapourSynth"
readme = "README.md"
requires-python = ">=3.10"
license-files = { paths = ["LICENSE"] }
authors = [
  { name = "HolyWu", email = "holywu@gmail.com" },
]
keywords = [
  "FeMaSR",
  "PyTorch",
  "TensorRT",
  "VapourSynth",
]
classifiers = [
  "Environment :: GPU :: NVIDIA CUDA",
  "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "numpy",
  "requests",
  "timm",
  "torch>=2.4.0.dev",
  "tqdm",
  "VapourSynth>=66",
]

[project.urls]
Homepage = "https://github.com/HolyWu/vs-femasr"
Issues = "https://github.com/HolyWu/vs-femasr/issues"
